<resources>
    <string name="app_name">Unit One Task</string>
    <string name="title_flight">Flights</string>
    <string name="title_hotels">Hotels</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Settings</string>
    <string name="title_login">Login</string>

<!--    <string name="title_dashboard">Dashboard</string>-->
<!--    <string name="title_notifications">Notifications</string>-->
</resources>