<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_flights"
        android:icon="@drawable/flights"
        android:title="@string/title_flight" />

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/hotels"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_setting" />

</menu>